--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     	<meta charset="utf-8">
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
-
 		<title>Relaxr</title>
 
 		<!-- external CSS link -->
@@ -16,7 +15,7 @@
 		<div id="container">
 			<header>
 				<h1 id="logo">Relaxr</h1> <!----- another <h1> tag in the footer ---------->
-				<nav>
+				<nav 
 					<ul id="navbar">
 						<li><a href="#">About</a></li>
 						<li><a href="#">FAQ</a></li>
@@ -31,15 +30,17 @@
 				<div class="top-section">
 					<h2 class="title">How I implemented Relaxr in 2 weeks and changed my life.</h2>
 						<img src="images/blog_photo1.jpg" alt="image"/>
-						<p class="section-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-							<button> <a href="#">Read more > </a></button>
+						<p class="section-paragraph" id="showTextTop">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+							<button type="button" id="readMoreTop"> <a href="#">Read more > </a></button>
+							<button type="button" id="readLessTop"> <a href="#">Read less > </a></button>
 							<hr class="line clear"/>
 				</div>
 				<div class="bottom-section">
 					<h2 class="title">I traveled across the globe thanks to Relaxr’s Excel automation</h2>
 						<img src="images/blog_photo2.jpg" alt="boat-image"/>
-						<p class="section-paragraph"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-							<button> <a href="#">Read more > </a></button>
+						<p class="section-paragraph" id="showTextBottom"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+							<button type="button" id="readMoreBottom"> <a href="#" >Read more > </a></button>
+							<button type="button" id="readLessBottom"> <a href="#" >Read less > </a></button>
 							<hr class="line clear"/>
 				</div>
 			</section><!--end of section-->
@@ -51,21 +52,39 @@
 					<p>How tos</p> 
 					<p>Best of</p> 
 					<p>Business tips</p>
+					<button type="button" id="readMoreAsideTop"> <a href="#" >Read more > </a></button>
+					<button type="button" id="readLessAsideTop"> <a href="#" >Read less > </a></button>
 				</div>
 				<div class="aside-body-text">
 					<h3>About Relaxr</h3>
 					<p>Proin sed justo vel sapien varius auctor. Proin scelerisque massa at luctus tincidunt. Fusce porttitor, sapien sed tincidunt fringilla.</p>
-					<button> <a href="#">Learn more</a></button>
+					<button type="button" id="readMoreAsideBottom"> <a href="#" >Read more > </a></button>
+					<button type="button" id="readLessAsideBottom"> <a href="#" >Read less > </a></button>
 				</div>
 				<div id="ad" class="clear">
 					<img src="images/ad-unit.png" alt="AD image"/>
 				</div>
 			</aside><!--end of aside-->
 			</div><!--end of news-section-->
-			<footer class="clear"> 
-				<div class="sign-up-sec button-line">
-						<a id="sign-up-now" href="#!">Sign Up Now</a> 
-				</div>	
+	<footer class="clear"> 
+			<div class="sign-up-sec button-line">
+				<a id="signUpNow" href="#!">Sign Up Now</a>	
+				  <div id="formContainer"> 
+						<form action="javascript:alert('submitted');" method="post" id="testForm">
+						    <label><b>Email</b></label>
+							<input type="text" placeholder="Enter Email" name="email" required>
+							<label><b>Password</b></label>
+							<input type="password" placeholder="Enter Password" name="psw" required>
+							<label><b>Repeat Password</b></label>
+							<input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+							<input type="checkbox" checked="checked"> Remember me
+						</form>
+							<div id="submission"> 
+							  <button type="button"  class="cancelbtn">Cancel</button>
+							  <button type="submit" class="signupbtn">Sign Up</button>
+							</div>
+				  </div><!--------end of form-container----->
+		 	</div><!-----end of sign-up-sec DIV --------->		     
 				<h1 id="footer-logo">Relaxr</h1>
 					<div>
 						<img src="images/twitter.png" alt="twitter img"/>
@@ -73,6 +92,9 @@
 					</div>
 				<p>Copyright 2015. Relaxr.</p>
 			</footer>
-		</div><!-- #container -->
+		</div><!--  main container--->
+   
+	   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	   <script src="js/javascript.js" type="text/javascript"> </script>
 	</body>
 </html>
